--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "serve": "vite preview"
+    "serve": "vite preview --port 3000"
   },
   "repository": {
     "type": "git",
@@ -23,13 +23,12 @@
     "@rollup/plugin-commonjs": "^22.0.0",
     "@rollup/plugin-replace": "^4.0.0",
     "@types/node": "^17.0.31",
-    "phaser": "^3.55.2",
     "typescript": "^4.6.4",
     "vite": "^2.9.13"
   },
   "dependencies": {
     "EventDispatcher": "^3.2.0",
-    "phaser-matter-collision-plugin": "^1.0.0",
+    "phaser": "^3.60.0",
     "phaser3-rex-plugins": "^1.60.4"
   }
 }
