--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
     "vite": "^2.9.13"
   },
   "dependencies": {
+    "@twurple/api": "^7.1.0-pre.1",
+    "@twurple/auth": "^7.1.0-pre.1",
+    "@twurple/eventsub-ws": "^7.1.0-pre.1",
     "EventDispatcher": "^3.2.0",
     "phaser": "^3.60.0",
     "phaser3-rex-plugins": "^1.60.4"
