--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "@twurple/api": "^7.1.0-pre.1",
     "@twurple/auth": "^7.1.0-pre.1",
+    "@twurple/chat": "^7.1.0-pre.1",
     "@twurple/eventsub-ws": "^7.1.0-pre.1",
     "EventDispatcher": "^3.2.0",
     "phaser": "^3.60.0",
